changed include to handle new release of hdb, flattening structure

--- a/site_data/src/Makefile.site_data
+++ b/site_data/src/Makefile.site_data
@@ -1,6 +1,6 @@
 #  The version for use with C and INGRES follows:
 
-include ../../../Environ
+include ../../Environ
 include make_include
 
 ######################### Directives ###############################
