--- a/gentea/src/Makefile
+++ b/gentea/src/Makefile
@@ -1,28 +1,32 @@
 #  The version for use with C and INGRES follows:
 
-include /wrg/hdb/HDB_applications/Environ
+include ../../Environ
 include make_include
 
 ######################### Directives ###############################
 
-TARGET = gentea
-OBJS = readdata.o teacup.o gentea.o
+TARGET = $(HDB_APP_BIN)/gentea
+OBJS = \
+	$(OBJDIR)/readdata.o \
+	$(OBJDIR)/teacup.o \
+	$(OBJDIR)/gentea.o
 
 main: $(TARGET)
+
+clean:
+	rm -f $(TARGET) $(OBJS)
 
 $(TARGET): $(OBJS)
 	$(CC) $(OBJS) $(LIBS) -o $(TARGET)
 
-readdata.o: \
+$(OBJDIR)/readdata.o: \
 	readdata.pc 
 	proc iname=readdata.pc include=$(HDB_APP_INCLUDE)
 	$(CC) $(CFLAGS) -c readdata.c -o $@
 
-gentea.o: gentea.c
+$(OBJDIR)/gentea.o: gentea.c
 	$(CC) $(CFLAGS) -c gentea.c -o $@
 
-teacup.o: teacup.c 
+$(OBJDIR)/teacup.o: teacup.c 
 	$(CC) $(CFLAGS) -c teacup.c -o $@
 
-install: $(TARGET)
-	cp $(TARGET) ../bin
