--- a/riverwareDMI/src/Makefile.output
+++ b/riverwareDMI/src/Makefile.output
@@ -4,7 +4,7 @@
 include ../../Environ
 
 OBJDIR = $(HDB_ENV)/riverwareDMI/obj
-INCLUDES = -I$(HDB_APP_INCLUDE) -I$(TK_INCLUDES) -I/usr/local/X11R5/include
+INCLUDES = -I$(HDB_APP_INCLUDE) -I$(TK_INCLUDES) -I$(TK_HEADER) -I/usr/local/X11R5/include
 LIBS = $(HDB_LIBS) -ldl -lX11 -lm $(TK_LIBS) -lsocket -lnsl
 CFLAGS = -ansi -Wall -g -DANSIPROTO $(INCLUDES)
 
@@ -49,7 +49,13 @@ $(TARGET): $(OBJS)
 	fi
 
 clean: 
-	rm -f $(OBJS)
+	rm -f $(OBJS) ; \
+        rm -f $(TARGET) ; \
+        rm -f $(HDB_APP_BIN)/RW.BHOPS.OutputDMI.sh ; \
+        rm -f $(HDB_APP_BIN)/RW.24m.OutputDMI.sh ; \
+        rm -f $(HDB_APP_BIN)/RW.UC.24m.OutputDMI.sh ; \
+        rm -f $(HDB_APP_BIN)/RW.LC.24m.OutputDMI.sh ; \
+        rm -f $(HDB_APP_BIN)/riverwareDMI.Out.GUI.tk ;
 
 ######################
 # TARGET DEFINITIONS #
@@ -63,7 +69,7 @@ $(OBJDIR)/DmiSaveModelData.o: \
 	$(HDB_APP_LIB)/libutils.a \
 	$(HDB_APP_LIB)/libhdb.a \
 	$(HDB_APP_LIB)/libdmi.a
-	proc code=ansi_c iname=DmiSaveModelData.pc include=$(HDB_APP_INCLUDE)
+	proc code=ansi_c CHAR_MAP=string sqlcheck=semantics userid=$(DBA)/$(DBA_PASSWD) iname=DmiSaveModelData.pc include=$(HDB_APP_INCLUDE)
 	$(CC) $(CFLAGS) -c DmiSaveModelData.c -o $@
 
 $(OBJDIR)/DmiSaveRealData.o: \
@@ -74,7 +80,7 @@ $(OBJDIR)/DmiSaveRealData.o: \
 	$(HDB_APP_LIB)/libutils.a \
 	$(HDB_APP_LIB)/libhdb.a \
 	$(HDB_APP_LIB)/libdmi.a
-	proc code=ansi_c iname=DmiSaveRealData.pc include=$(HDB_APP_INCLUDE)
+	proc code=ansi_c CHAR_MAP=string sqlcheck=semantics userid=$(DBA)/$(DBA_PASSWD) iname=DmiSaveRealData.pc include=$(HDB_APP_INCLUDE)
 	$(CC) $(CFLAGS) -c DmiSaveRealData.c -o $@
 
 $(OBJDIR)/riverwareDMI.Out.o: \
