Re-found Rick's work from last week that I somehow blew away.

--- a/gentea/work/crsp.cfg
+++ b/gentea/work/crsp.cfg
@@ -1,5 +1,6 @@
-teacup   80 625  919 17   4      24322000.0  Lake Powell
-teacup  255 200  916 17   1      344800.0  Fontenelle
-teacup  325 310  917 17   2      3749000.0  Flaming Gorge
-teacup  480 560  913 17   1      829500.0  Blue Mesa
-teacup  460 710  920 17   2      1696000.0  Navajo
+teacup   50 500  919 17   4      24322000.0  Lake Powell
+teacup  235 155  916 17   1      344800.0  Fontenelle
+teacup  120 260  917 17   2      3749000.0  Flaming Gorge
+teacup  465 505  913 17   2      829500.0  Blue Mesa
+teacup  440 420  914 17   1      117190.0 Morrow Point
+teacup  440 630  920 17   2      1696000.0  Navajo
