--- a/riverwareDMI/src/Makefile.input
+++ b/riverwareDMI/src/Makefile.input
@@ -4,7 +4,7 @@
 include ../../Environ
 
 OBJDIR = $(HDB_ENV)/riverwareDMI/obj
-INCLUDES = -I$(HDB_APP_INCLUDE) -I$(TK_INCLUDES) -I$(TK_HEADER) -I/usr/local/X11R5/include
+INCLUDES = -I$(HDB_APP_INCLUDE) -I$(TK_INCLUDES) -I/usr/local/X11R5/include
 LIBS = $(HDB_LIBS) -ldl -lX11 -lm $(TK_LIBS) -lsocket -lnsl
 CFLAGS = -ansi -Wall -g -DANSIPROTO $(INCLUDES)
 
