Makefile fixes, mostly adding Pro*C generated files to clean target, as well as $(TARGET) so clean gets rid of the output

--- a/basins/src/Makefile
+++ b/basins/src/Makefile
@@ -19,11 +19,19 @@ OBJS = \
 	$(OBJDIR)/UpdateBasins.o \
 	$(OBJDIR)/SqlUpdateBasins.o
 
+INTERMED_PROC_FILES = \
+	SqlFetchSiteNames.c \
+	SqlUpdateBasins.c \
+	SqlUpdateSnotel.c
+
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(TARGET) $(LIBS)
 
 clean: 
 	rm -f $(OBJS)
+	rm -f $(TARGET)
+	rm -f $(INTERMED_PROC_FILES)
+	rm -f *.lis
 
 #        TARGET DEFINITIONS
 
