--- a/riverwareDMI/src/Makefile.input
+++ b/riverwareDMI/src/Makefile.input
@@ -5,7 +5,8 @@ include ../../Environ
 
 OBJDIR = $(HDB_ENV)/riverwareDMI/obj
 INCLUDES = -I$(HDB_APP_INCLUDE) -I$(TK_INCLUDES) -I/usr/local/X11R5/include
-LIBS = $(HDB_LIBS) -ldl -lX11 -lm $(TK_LIBS) -lsocket -lnsl
+#May need -lsocket for Solaris compile
+LIBS = $(HDB_LIBS) -ldl -lm $(TK_LIBS) -lnsl
 CFLAGS = -ansi -Wall -g -DANSIPROTO $(INCLUDES)
 
 TARGET = $(HDB_APP_BIN)/riverwareDMI.In
@@ -19,6 +20,9 @@ LOCAL_INCS = dailyDmiIn.h
 
 GLOBAL_INCS = $(HDB_APP_INCLUDE)/dmi_utils.h \
               $(HDB_APP_INCLUDE)/dmiGlobals.h
+
+INTERMED_PROC_FILES = \
+	SqlGetDmiData.c
 
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $(TARGET) $(LIBS)
@@ -44,6 +48,8 @@ clean:
 	rm -f $(HDB_APP_BIN)/RW.BHOPS.InputDMI.sh ; \
 	rm -f $(HDB_APP_BIN)/RW.24m.InputDMI.sh ; \
 	rm -f $(HDB_APP_BIN)/riverwareDMI.In.GUI.tk ;
+	rm -f $(INTERMED_PROC_FILES)
+	rm -f *.lis
 
 ######################
 # TARGET DEFINITIONS #
