Renamed .cvsignore to .gitignore

--- a/gentea/work/pecosrio.cfg
+++ b/gentea/work/pecosrio.cfg
@@ -1,4 +1,6 @@
-teacup   20 300 1119 17   2     1973358.0 Elephant Butte
-teacup   20 370 1094 17   1      226672.0 Caballo
-teacup  315 270  943 17   1       51418.0 Sumner
-teacup  325 330  937 17   1       41870.0 Brantley
+teacup   50 130 1119 17   4     1973358.0 Elephant Butte
+teacup   20 350 1094 17   2      226672.0 Caballo
+teacup  400 255  943 17   1       51418.0 Sumner
+teacup  400 315  937 17   1       41870.0 Brantley
+
+teacup  400 375  2684 17   1       4466.0 Avalon
