--- a/gentea/work/green.cfg
+++ b/gentea/work/green.cfg
@@ -1,5 +1,7 @@
-teacup  140 587  944 17   1       29870.0  Meeks Cabin 
-teacup  220 596  949 17   1       13880.0  Stateline 
-teacup  362 270  936 17   1       38300.0  Big Sandy
-teacup  195 375  916 17   2      344800.0  Fontenelle 
-teacup  400 482  917 17   3     3749000.0  Flaming Gorge
+teacup  35  515  944 17   1       29870.0  Meeks Cabin 
+teacup  65  600  949 17   1       13880.0  Stateline 
+teacup  450 150  936 17   1       36688.0  Big Sandy
+teacup  40  305  916 17   3      344800.0  Fontenelle 
+teacup  510 380  917 17   4     3749000.0  Flaming Gorge
+ 
+teacup  490 230  954 17   1       13164.0  Eden
