--- a/gentea/work/sanjuan.cfg
+++ b/gentea/work/sanjuan.cfg
@@ -1,5 +1,6 @@
-teacup  400  32  934 17   1       39792.0  Lemon 
-teacup  320 185  935 17   1        9951.0  Jackson Gulch
-teacup  490  50  933 17   1      125400.0  Vallecito
-teacup  455 280  920 17   2     1696000.0  Navajo 
-teacup  271  42  958 17   1      381100.0  McPhee 
+teacup  423  27  934 17   1       39792.0  Lemon 
+teacup  130 310  935 17   1        9951.0  Jackson Gulch
+teacup  515  72  933 17   2      125400.0  Vallecito
+teacup  495 360  920 17   4     1696000.0  Navajo 
+teacup  135  85  958 17   3      381100.0  McPhee
+teacup  325  65 3083 17   2      115075.0    Lake Nighthorse
