--- a/gentea/work/wasatch.cfg
+++ b/gentea/work/wasatch.cfg
@@ -1,13 +1,14 @@
-teacup  470  85  957 17   1       15280.0  Hyrum
-teacup  470 160  925 17   1      198270.0  Willard Bay
-teacup  470 235  946 17   1      110149.0  Pineview 
-teacup  470 310  938 17   1        7070.0  Causey
-teacup  470 385  942 17   1       22501.0  Lost Creek 
-teacup  470 460  941 17   1       73940.0  Echo
-teacup  470 535  940 17   1       49510.0  East Canyon
-teacup  470 610  947 17   1       60860.0  Rockport
-teacup  470 685  964 17   1      320300.0  Jordanelle 
-teacup  470 760  953 17   1      149700.0  Deer Creek 
+teacup  140 100  959 17   1        5374.0  Newton
+teacup  75  180  957 17   1       14734.0  Hyrum
+teacup  70  285  925 17   2      222273.0  Willard Bay
+teacup  540 280  946 17   2      110149.0  Pineview 
+teacup  535 360  938 17   1        7070.0  Causey
+teacup  520 430  942 17   1       22501.0  Lost Creek 
+teacup  535 510  941 17   1       73940.0  Echo
+teacup  515 590  940 17   1       49510.0  East Canyon
+teacup  480 655  947 17   1       60860.0  Rockport 
+teacup  90  615  964 17   3      311000.0  Jordanelle 
+teacup  100 725  953 17   2      150161.0  Deer Creek 
 
 
 
