--- a/gentea/work/pecosrio.cfg
+++ b/gentea/work/pecosrio.cfg
@@ -1,6 +1,5 @@
-teacup   50 130 1119 17   4     1973358.0 Elephant Butte
-teacup   20 350 1094 17   2      226672.0 Caballo
-teacup  400 255  943 17   1       51418.0 Sumner
-teacup  400 315  937 17   1       41870.0 Brantley
-
-teacup  400 375  2684 17   1       4466.0 Avalon
+teacup   50 130 1119 17   4       2010900 Elephant Butte
+teacup   20 350 1094 17   2        224464 Caballo
+teacup  400 255  943 17   1         35917 Sumner
+teacup  400 315  937 17   1         42602 Brantley
+teacup  400 375 2684 17   1          4466 Avalon
