--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,9 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": "-a ~/.app_user_login_service -l d -n 30 -e 2019-04-30 -d -t",
+            "args": "-a ~/.app_user_login_service -n 30 -e 2019-04-30",
             "justMyCode": false,
+            "env": {"PYTHONPATH": "..:python"},
             //"args": "${command:pickArgs}"
         },
         {
