--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false,
+            "args": " -l d -a ~/.app_user_login_service -n 5 -t",
         }
     ]
 }
