--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ ratings/usgs/src/data
 *.rdb
 obj64
 *.png
-python/venv
+python/venv*
 *.xlsx
 .idea
 .gradle
@@ -23,4 +23,4 @@ plots/
 gradle/
 gradlew
 gradlew.bat
-
+.vscode/perl-lang
