Working OneRain Python loader

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,11 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": "-a ~/.app_user_login_service -n 30 -e 2019-04-30",
+            //"args": "-a ~/.app_user_login_service -n 2 -e 2025-09-15 -l d -d",
+            "envFile": "/home/agilmore/workspace/HDB/bashrc_hdb_app_local",
             "justMyCode": false,
             "env": {"PYTHONPATH": "..:python"},
-            //"args": "${command:pickArgs}"
+            "args": "${command:pickArgs}"
         },
         {
             "name": "Python Debugger: Current File",
@@ -22,6 +23,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
+            "envFile": "/home/agilmore/workspace/HDB/bashrc_hdb_app_local",
             "justMyCode": false,
             "args": " -l d -a ~/.app_user_login_service -n 5 -t",
         },
@@ -33,7 +35,10 @@
             "program": "${file}",
             "stopOnEntry": true,
             "reloadModules": true,
-            "args": "-a ~/.app_user_login_service -l u -n 1 -e 30-APR-2019 -dwt",
+            "env": {
+                "HDB_ENV": "${env:HDB_ENV}",
+            },
+            "args": "-a ~/.app_user_login_service -l u -n 1 -e 30-APR-2019 -dwt"
         },
         
     ]
